--- a/src/views/polls.hbs
+++ b/src/views/polls.hbs
@@ -8,11 +8,12 @@
   </div>
 </div>
 {{/if}}
+{{>messages}}
 <div class="container" style="margin-top:20px">
   <div class="row">
     {{#each polls }} 
     <div class="col-4">
-      <div class="card h-100 d-inline-block w-100">
+      <div class="card h-100 d-inline-block w-100" >
         <div class="card-header d-flex mh-2">
           <h3 class="card-title d-flex jusify-content-between">
             {{name}}
